core-plugins/src/test/resources/scraper/plugins/core/typechecker/fail/mapjoin.yf
---
name: mapjoin
graphs:
  start:
    - type: MapJoinNode
      list: [A,B]
      mapTarget: X
      keys:
        key: keyfromx

    - type: StringContainsNode
      regex: ""
      content: "{keyfromx}" # content :: String

  X:
    - type: EchoNode
      put: key
      value: "1"


